# fast-guided-filter

./: .gitignore  CMakeLists.txt  README.md  libfastguidedfilter.pc.cmakein  main.cpp
FastGuidedFilter/: fastguidedfilter.cpp  fastguidedfilter.h
ffmpeg-avfilter/: configure.diff  vf_libopencv.c
