cmake_minimum_required(VERSION 3.5)
set(PROJECT_NAME fastguidedfilter)
set(APP_NAME fgfapp)
project(${PROJECT_NAME})

set(CPACK_GENERATOR "DEB")
set(CPACK_DEBIAN_PACKAGE_MAINTAINER "wangxinyu")
set(CPACK_PACKAGE_NAME "${PROJECT_NAME}")
set(CPACK_PACKAGE_VERSION_MAJOR "1")
set(CPACK_PACKAGE_VERSION_MINOR "13")
set(CPACK_PACKAGE_VERSION_PATCH "0531")
set(CPACK_DEBIAN_PACKAGE_DEPENDS "")
set(CPACK_PACKAGE_VERSION "${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}")
set(CPACK_PACKAGE_VENDOR "qian.chang@hotstar.com")
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "${PROJECT_NAME} ${PACKAGE_VERSION}")
set(VERSION "${CPACK_PACKAGE_VERSION}")
set(CPACK_PACKAGE_FILE_NAME ${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}-${CMAKE_SYSTEM_NAME}-${CMAKE_SYSTEM_PROCESSOR})

set(CMAKE_CXX_STANDARD 11)
FIND_PACKAGE(OpenCV REQUIRED)
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})

file(GLOB SOURCE_FILES ./FastGuidedFilter/*.cpp)
include_directories (./  /usr/local/include /usr/local/include/opencv /usr/local/include/opencv2)
add_library(${PROJECT_NAME} SHARED ${SOURCE_FILES})
add_executable(${APP_NAME} main.cpp)
target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS})
target_link_libraries(${APP_NAME} ${OpenCV_LIBS} ${PROJECT_NAME})

set(LIBDIR "${CMAKE_INSTALL_PREFIX}/lib")
set(INCLUDEDIR "${CMAKE_INSTALL_PREFIX}/include")
set(PKGCONFIGDIR "${CMAKE_INSTALL_PREFIX}/lib/pkgconfig")
configure_file(${CMAKE_CURRENT_SOURCE_DIR}/libfastguidedfilter.pc.cmakein lib${PROJECT_NAME}.pc @ONLY)
install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION ${BINDIR} LIBRARY DESTINATION ${LIBDIR})
install(FILES FastGuidedFilter/fastguidedfilter.h  DESTINATION ${INCLUDEDIR})
install(FILES ${CMAKE_BINARY_DIR}/lib${PROJECT_NAME}.pc DESTINATION ${PKGCONFIGDIR})
include(CPack)
